.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconpbill__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_soconpbill</customHelpPage>
    <description>soconpbill__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconpbill_socontract__r.rstk__socontract_contractid__c + &apos;_&apos; + rstk__soconpbill_soconpbbatch__r.rstk__soconpbbatch_runno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconpbill_socontract__r.rstk__socontract_contractid__c + &apos;(&apos; + TEXT(rstk__soconpbill_fromdate__c) + &apos;-&apos; + TEXT(rstk__soconpbill_thrudate__c) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_extcomment__c</fullName>
        <inlineHelpText>Comments intended to be printed on any document generated for the given billing record for Customer.</inlineHelpText>
        <label>External Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_fromdate__c</fullName>
        <inlineHelpText>The beginning date for which this billing cycle covers.</inlineHelpText>
        <label>Billing Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_intcomment__c</fullName>
        <inlineHelpText>Comments not intended to be printed on any document generated for Customer.</inlineHelpText>
        <label>Internal Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_rcbfreq__c</fullName>
        <formula>TEXT(rstk__soconpbill_socontract__r.rstk__socontract_rcbfreq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The periodic recurring charge billing frequency as defined on the Sales Contract.</inlineHelpText>
        <label>Recurring Charge Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_rundate__c</fullName>
        <inlineHelpText>The &quot;as-of&quot; date (or effective date) that this billing cycle covers.</inlineHelpText>
        <label>Billing Run As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_servicecust__c</fullName>
        <formula>rstk__soconpbill_socontract__r.rstk__socontract_servicecust__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Service Customer defined on the given Sales Contract.</inlineHelpText>
        <label>Service Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_soconpbbatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Billing Run Batch that this billing is contained within</inlineHelpText>
        <label>Billing Run Batch Header</label>
        <referenceTo>rstk__soconpbbatch__c</referenceTo>
        <relationshipLabel>Contract Periodic Billings</relationshipLabel>
        <relationshipName>soconpbills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_socontract__c</fullName>
        <inlineHelpText>The Sales Contract billed.</inlineHelpText>
        <label>Sales Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Contract Periodic Billings</relationshipLabel>
        <relationshipName>soconpbills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_soinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Invoiced, the Sales Invoice generated from this billing.</inlineHelpText>
        <label>Sales Invoice</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>Contract Periodic Billings</relationshipLabel>
        <relationshipName>soconpbills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_status__c</fullName>
        <inlineHelpText>The billing status of this particular billing.  Values are -

New
Cancelled
Hold
Rejected
Approval in Process
Approved
Invoiced</inlineHelpText>
        <label>Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approval in Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Processed With Errors</fullName>
                </value>
                <value>
                    <fullName>Rejected with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_thrudate__c</fullName>
        <inlineHelpText>The date through which this billing cycle covers.</inlineHelpText>
        <label>Billing Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbill_totalamt__c</fullName>
        <inlineHelpText>The total billing amount for this billing cycle.</inlineHelpText>
        <label>Periodic Billing Amount</label>
        <summarizedField>rstk__soconpbdtl__c.rstk__soconpbdtl_amount__c</summarizedField>
        <summaryForeignKey>rstk__soconpbdtl__c.rstk__soconpbdtl_soconpbill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Periodic Billing</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Contract_Periodic_Billings</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpbill_socontract__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soconpbill_totalamt__c</columns>
        <columns>rstk__soconpbill_rcbfreq__c</columns>
        <columns>rstk__soconpbill_status__c</columns>
        <columns>rstk__soconpbill_rundate__c</columns>
        <columns>rstk__soconpbill_fromdate__c</columns>
        <columns>rstk__soconpbill_soinv__c</columns>
        <columns>rstk__soconpbill_thrudate__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Periodic Billings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Periodic_Billings</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpbill_socontract__c</columns>
        <columns>rstk__soconpbill_soinv__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soconpbill_soconpbbatch__c</columns>
        <columns>rstk__soconpbill_totalamt__c</columns>
        <columns>rstk__soconpbill_rcbfreq__c</columns>
        <columns>rstk__soconpbill_status__c</columns>
        <columns>rstk__soconpbill_rundate__c</columns>
        <columns>rstk__soconpbill_fromdate__c</columns>
        <columns>rstk__soconpbill_thrudate__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Periodic Billings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Periodic Billing  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Periodic Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>